--- a/src/Models/LSTM/LSTMStation.ipynb
+++ b/src/Models/LSTM/LSTMStation.ipynb
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = X_train.reshape(X_train.shape[0], X_train.shape[1], 1)"
+    "x_train, y_train = create_io_pair(X_train, Y_train, k=100)"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, y_train = create_io_pair(X_train, Y_train, k=100)"
+    "x_train = x_train.reshape(x_train.shape[0], x_train.shape[1], 1)"
    ]
   },
   {
@@ -375,7 +375,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LSTM_model(x_train.shape[1], x_train.shape[2], units=50, dropout=0.2, optimizer='adam')"
+    "model = LSTM_model(\n",
+    "    x_train.shape[1], x_train.shape[2], units=50, dropout=0.2, optimizer=\"adam\"\n",
+    ")"
    ]
   },
   {
