--- a/src/Models/LSTM/LSTMSatellite.ipynb
+++ b/src/Models/LSTM/LSTMSatellite.ipynb
@@ -338,7 +338,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(x_test.shape, y_test.shape)"
+   ]
   },
   {
    "attachments": {},
@@ -417,7 +419,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = model.fit(x_train, y_train, epochs=100, batch_size=64) ## this will be terminated when the input size is too large"
+    "history = model.fit(\n",
+    "    x_train, y_train, epochs=100, batch_size=64\n",
+    ")  ## this will be terminated when the input size is too large"
    ]
   },
   {
