--- a/src/Models/LSTM/LSTMStation.ipynb
+++ b/src/Models/LSTM/LSTMStation.ipynb
@@ -297,25 +297,39 @@
    "outputs": [],
    "source": [
     "X_train = np.array(trainDf.drop(columns=[\"downgrade\"]))\n",
-    "Y_train = np.array(trainDf[\"downgrade\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train, y_train = create_io_pair(X_train, Y_train, k=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Y_train = np.array(trainDf[\"downgrade\"])\n",
+    "x_train, y_train = create_io_pair(X_train, Y_train, k=100)\n",
     "x_train = x_train.reshape(x_train.shape[0], x_train.shape[1], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(x_train.shape, y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = np.array(testDf.drop(columns=[\"downgrade\"]))\n",
+    "Y_test = np.array(testDf[\"downgrade\"])\n",
+    "x_test, y_test = create_io_pair(X_test, Y_test, k=100)\n",
+    "x_test = x_test.reshape(x_test.shape[0], x_test.shape[1], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(x_test.shape, y_test.shape)"
    ]
   },
   {
@@ -362,6 +376,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LSTM_model(\n",
+    "    x_train.shape[1], x_train.shape[2], units=50, dropout=0.2, optimizer=\"adam\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -375,9 +409,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LSTM_model(\n",
-    "    x_train.shape[1], x_train.shape[2], units=50, dropout=0.2, optimizer=\"adam\"\n",
-    ")"
+    "history = model.fit(\n",
+    "    x_train, y_train, epochs=100, batch_size=64\n",
+    ")  ## this will be terminated when the input size is too large"
    ]
   },
   {
@@ -389,10 +423,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_bal_LSTM = model.predict(x_test)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### <u>**Step 5.4**</u>: Evaluate models based on different metrics:\n",
+    "- ACCURACY:\n",
+    "- PRECISION:\n",
+    "- RECALL:\n",
+    "- F1:\n",
+    "- ROC AUC:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "printMetrics(\n",
+    "    \"LSTM unbalanced train set\",\n",
+    "    testDf[\"downgrade\"],\n",
+    "    prediction_bal_LSTM,\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
