Update each Satellite notebook with model explanation

--- a/src/Models/Boost/BoostSatellite.ipynb
+++ b/src/Models/Boost/BoostSatellite.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "## Gradient Boosting Model on Satellite Data\n",
     "\n",
-    "- Gradient builds an additive model in a forward stage-wise fashion, which allows for the optimization of arbitrary differentiable loss functions. "
+    "- Gradient Boosting is an ensemble machine learning technique that combines weak learners (often decision trees) sequentially to create a strong predictive model. It corrects errors made by previous models by assigning higher importance to challenging instances and using gradient descent to optimize each new model's parameters. Popular implementations include XGBoost, LightGBM, and CatBoost.\n",
+    "- In this notebook, we are experimenting on the XGBoost Model."
    ]
   },
   {
