--- a/src/Models/Forest/ForestSatellite.ipynb
+++ b/src/Models/Forest/ForestSatellite.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "how this notebook works"
+    "## Random Forest on Satellite Data\n",
+    "\n",
+    "- Random Forest is an ensemble learning method that constructs multiple decision trees during training and combines their predictions for improved accuracy and generalization. It introduces randomness by using bootstrapped subsets of data and random feature selection for each tree, which helps reduce overfitting. By aggregating the predictions of individual trees, Random Forest provides robustness and is widely used for classification and regression tasks in machine learning."
    ]
   },
   {
@@ -21,7 +23,6 @@
     "import sys, os\n",
     "import pickle\n",
     "from imblearn.combine import SMOTEENN, SMOTETomek\n",
-    "from xgboost import XGBRFClassifier\n",
     "from sklearn.ensemble import (  # type: ignore\n",
     "    RandomForestClassifier,\n",
     ")\n",
@@ -134,6 +135,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -158,6 +160,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
