--- a/src/Models/KNN/KNNSatellite.ipynb
+++ b/src/Models/KNN/KNNSatellite.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## KNN For Satellite Weather"
+    "## KNN For Satellite Weather\n",
+    "\n",
+    "- The k-Nearest Neighbors (KNN) model is a simple yet effective supervised learning algorithm used for classification and regression tasks. It predicts the class or value of a data point by considering the classes or values of its k closest neighbors in the training data. KNN relies on distance metrics to determine similarity between data points, making it sensitive to the choice of distance metric and the value of k."
    ]
   },
   {
