--- a/src/Models/SVM/SVMSatellite.ipynb
+++ b/src/Models/SVM/SVMSatellite.ipynb
@@ -5,7 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SVM For Weather Satellite"
+    "## SVM For Weather Satellite\n",
+    "\n",
+    "- Support Vector Machine (SVM) is a supervised machine learning algorithm used for classification and regression tasks. It works by finding a hyperplane that best separates different classes in the input space, aiming to maximize the margin between data points of different classes. \n",
+    "\n",
+    "- SVM can handle high-dimensional data and is effective in cases where classes are not linearly separable by using kernel functions to transform the data into higher-dimensional space. This algorithm aims to find a balance between maximizing separation and minimizing classification errors."
    ]
   },
   {
