--- a/src/Models/LSTM/LSTMSatellite.ipynb
+++ b/src/Models/LSTM/LSTMSatellite.ipynb
@@ -5,7 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Long Short Term Memory on Weather Station Data"
+    "## Long Short Term Memory on Weather Station Data\n",
+    "\n",
+    "- Long Short-Term Memory (LSTM) is a type of recurrent neural network (RNN) architecture designed to model sequential data by maintaining a memory of past information while selectively updating and forgetting information over time.\n",
+    "\n",
+    "- They are particularly effective in capturing long-range dependencies in sequences, making them well-suited for tasks like natural language processing, speech recognition, and time series forecasting. They combat the vanishing gradient problem of traditional RNNs through a sophisticated gating mechanism that enables them to learn and retain information for longer periods.\n",
+    "\n",
+    "- In this notebook, we grasp all data based on data steps. For example: if k (step) = 100, we take convert each data point in our dataset to (100, 1) means using 100 data points before that time step to predict the next 101 time step."
    ]
   },
   {
@@ -246,7 +252,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def printMetrics(model_name, y_true, y_pred):\n",
+    "    print(model_name)\n",
+    "    print(\"Accuracy: \", accuracy_score(y_true, y_pred))\n",
+    "    print(\"Precision: \", precision_score(y_true, y_pred))\n",
+    "    print(\"Recall: \", recall_score(y_true, y_pred))\n",
+    "    print(\"F1: \", f1_score(y_true, y_pred))\n",
+    "    print(\"ROC AUC: \", roc_auc_score(y_true, y_pred))\n",
+    "    print(\"Classification Report: \\n\", classification_report(y_true, y_pred))\n",
+    "    print()"
+   ]
   },
   {
    "attachments": {},
@@ -269,7 +285,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_io_pair(\n",
+    "    X_train: np.ndarray, Y_train: np.ndarray, k=100\n",
+    ") -> \"tuple(np.ndarray, np.ndarray)\":\n",
+    "    \"\"\"\n",
+    "    k: time step\n",
+    "    return: (input, output) pairs from given data\n",
+    "    \"\"\"\n",
+    "    windows = []\n",
+    "    windows_y = []\n",
+    "\n",
+    "    for i, sequence in enumerate(X_train):\n",
+    "        len_seq = len(sequence)\n",
+    "        for window_start in range(0, len_seq - k + 1):\n",
+    "            window_end = window_start + k\n",
+    "            window = sequence[window_start:window_end]\n",
+    "            windows.append(window)\n",
+    "            windows_y.append(Y_train[i])\n",
+    "    return (np.array(windows), np.array(windows_y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = np.array(trainDf.drop(columns=[\"downgrade\"]))\n",
+    "Y_train = np.array(trainDf[\"downgrade\"])\n",
+    "x_train, y_train = create_io_pair(X_train, Y_train, k=100)\n",
+    "x_train = x_train.reshape(x_train.shape[0], x_train.shape[1], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(x_train.shape, y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = np.array(testDf.drop(columns=[\"downgrade\"]))\n",
+    "Y_test = np.array(testDf[\"downgrade\"])\n",
+    "x_test, y_test = create_io_pair(X_test, Y_test, k=100)\n",
+    "x_test = x_test.reshape(x_test.shape[0], x_test.shape[1], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(x_test.shape, y_test.shape)"
+   ]
   },
   {
    "attachments": {},
@@ -315,6 +392,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LSTM_model(\n",
+    "    x_train.shape[1], x_train.shape[2], units=50, dropout_rate=0.2, optimizer=\"adam\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -323,11 +420,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit(\n",
+    "    x_train, y_train, epochs=100, batch_size=64\n",
+    ")  ## this will be terminated when the input size is too large"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "##### <u>**Step 5.3**</u>: Test the model on the testing dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_bal_LSTM = model.predict(x_test)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <u>**Step 5.4**</u>: Evaluate models based on different metrics:\n",
+    "- ACCURACY:\n",
+    "- PRECISION:\n",
+    "- RECALL:\n",
+    "- F1:\n",
+    "- ROC AUC:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "printMetrics(\n",
+    "    \"LSTM unbalanced train set\",\n",
+    "    testDf[\"downgrade\"],\n",
+    "    prediction_bal_LSTM,\n",
+    ")"
    ]
   },
   {
