some more documents for MLP

--- a/src/Models/MLP/MLPSatellite.ipynb
+++ b/src/Models/MLP/MLPSatellite.ipynb
@@ -5,7 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "how this notebook works"
+    "## MLP on Weather Station Data\n",
+    "\n",
+    "- Multilayer Layer Perceptron (MLP) is a neural network (deep learning version) model, which is treated as the human brain. Each datapoint is used to propagate through the model to adjust all the weights of each neuron. Thus, having a better set of weights\n",
+    "\n",
+    "- The model is tested on different layers (1, 2, 3, 4, 5). Using sigmoid as the [activation function](https://www.geeksforgeeks.org/activation-functions-neural-networks/) for the binary output."
    ]
   },
   {
