Update model documentation (#128)
- Update documentation
- Update LSTM notebook (last time, it did not save the latest version,
missing piece left in my local)

---------

Co-authored-by: danielmai12 <76856643+danielmai12@github.com>

--- a/src/Ergot/ergotVisualization.ipynb
+++ b/src/Ergot/ergotVisualization.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -21,6 +22,8 @@
    "source": [
     "from matplotlib import pyplot as plt  # type: ignore\n",
     "from matplotlib import cm, colors  # type: ignore\n",
+    "from matplotlib.colors import ListedColormap, Normalize  # type: ignore\n",
+    "from matplotlib.cm import ScalarMappable  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import geopandas as gpd  # type: ignore\n",
     "import sqlalchemy as sq\n",
@@ -33,6 +36,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,6 +88,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -114,6 +119,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -142,6 +148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,6 +167,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -181,6 +189,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,6 +237,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,6 +258,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -310,6 +321,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -338,6 +350,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -359,6 +372,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -393,6 +407,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -420,6 +435,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -428,10 +444,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Psuedocode:\n",
+    "Pseudocode:\n",
     "- Get the bounding box (minimum and maximum coordinates). \n",
     "- Create a figure and axes.\n",
     "- Set the y-axis and x-axis limits of the axes using the bounding box coordinates obtained earlier.\n",
@@ -452,6 +469,13 @@
     "    ax.set_ylim(miny, maxy)\n",
     "    ax.set_xlim(minx, maxx)\n",
     "    ax.set_title(\"Incident level for district in \" + str(year))\n",
+    "\n",
+    "    # Create a custom colormap based on unique colors in color_map\n",
+    "    unique_colors = color_map.unique()\n",
+    "    cmap = ListedColormap(unique_colors)\n",
+    "    normalize = Normalize(vmin=0, vmax=len(unique_colors) - 1)\n",
+    "    scalar_mappable = ScalarMappable(cmap=cmap, norm=normalize)\n",
+    "\n",
     "    agRegions.plot(ax=ax, color=color_map, edgecolor=\"black\")\n",
     "    agRegions.apply(\n",
     "        lambda x: ax.annotate(\n",
@@ -463,10 +487,16 @@
     "        ),\n",
     "        axis=1,\n",
     "    )\n",
+    "\n",
+    "    # Create a colorbar without tick labels\n",
+    "    cbar = plt.colorbar(scalar_mappable, ax=ax, orientation=\"vertical\", pad=0.02)\n",
+    "    cbar.set_label(\"Incident Level\")\n",
+    "\n",
     "    plt.show()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -481,7 +511,7 @@
    "outputs": [],
    "source": [
     "for currYear in range(1995, 2023):\n",
-    "    ratio_year = region_df.loc[region_df[\"year\"] == year]\n",
+    "    ratio_year = region_df.loc[region_df[\"year\"] == currYear]\n",
     "    color = get_color(ratio_year)\n",
     "    plot_map(color, currYear)"
    ]
@@ -495,6 +525,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -527,6 +558,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -549,11 +581,12 @@
     "    upper_bound = q3 + 1.5 * iqr\n",
     "\n",
     "    # create conditions to isolate the outliers\n",
-    "    outliers = data[(data < lower_bound) | (data > upper_bound)]\n",
+    "    outliers = [value for value in data if value < lower_bound or value > upper_bound]\n",
     "    return q1, q2, q3, outliers"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -568,6 +601,7 @@
    "outputs": [],
    "source": [
     "data = np.array(agg_ergot_df[\"severity\"])\n",
+    "\n",
     "q1, q2, q3, outliers = stats(data.tolist())\n",
     "print(\"number of outliers:\", len(outliers))\n",
     "print(\"q1, q2, q3: {}, {}, {}\".format(q1, q2, q3))\n",
@@ -575,6 +609,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -624,6 +659,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -696,6 +732,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -727,6 +764,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -763,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
