--- a/src/Models/LSTM/LSTMSatellite.ipynb
+++ b/src/Models/LSTM/LSTMSatellite.ipynb
@@ -5,7 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Long Short Term Memory on Weather Station Data"
+    "## Long Short Term Memory on Weather Station Data\n",
+    "\n",
+    "- Long Short-Term Memory (LSTM) is a type of recurrent neural network (RNN) architecture designed to model sequential data by maintaining a memory of past information while selectively updating and forgetting information over time.\n",
+    "\n",
+    "- They are particularly effective in capturing long-range dependencies in sequences, making them well-suited for tasks like natural language processing, speech recognition, and time series forecasting. They combat the vanishing gradient problem of traditional RNNs through a sophisticated gating mechanism that enables them to learn and retain information for longer periods.\n",
+    "\n",
+    "- In this notebook, we grasp all data based on data steps. For example: if k (step) = 100, we take convert each data point in our dataset to (100, 1) means using 100 data points before that time step to predict the next 101 time step."
    ]
   },
   {
